--- a/webclient/templates/webclient/detail.html
+++ b/webclient/templates/webclient/detail.html
@@ -5,6 +5,11 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script>
+if ( window.history.replaceState ) {
+        window.history.replaceState( null, null, window.location.href );
+    }
+</script>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -15,45 +20,53 @@
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
         <a class="nav-link" href="{%  url 'webclient:index' %}">
-            Files  <span class="sr-only">(current)</span></a>
+            Root folder <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url  'webclient:folder_add' folder_id%}">Encryption-Decryption Schema {{ folder_id }}</a>
+        <a class="nav-link" href="{% url  'webclient:folder_add' folder_id%}">Add folder</a>
       </li>
-        <form class="navbar-form navbar-right" role="search" method="get" action="#">
+      <li class="nav-item">
+        <a class="nav-link" href="{% url  'webclient:file_add' folder_id%}">Add file</a>
+      </li>
+        <!-- <form class="navbar-form navbar-right" role="search" method="get" action="#">
         <div class="form-group">
       <input class="form-control" type="text" name="q" value="">
 
         </div>
 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 
-    </form>
+    </form> -->
         <li class="nav-item">
         <a class="nav-link" href="#">
             <span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp; Logout</a>
-        <li class="nav-item">  <a class="nav-link" href="{% url  'webclient:file_add' folder_id%}">File Add</a></li>
-      </li>
+        <!-- <li class="nav-item">  <a class="nav-link" href="{% url  'webclient:file_add' folder_id%}">File Add</a></li>
+      </li> -->
     </ul>
 
   </div>
 </nav>
 
 
-
+<h3>Current working directory id-({{folder_id}})</h3>
+<h4>Folders(folder-id)</h4>
+{% if folders %}
 <ul>
     {%  for folde in folders%}
-            <li><a href="{% url 'webclient:detail' folde.id %}">{{ folde.name }}</a> </li>
+            <li><a href="{% url 'webclient:detail' folde.id %}" >{{ folde.name }}({{folde.id}})</a> </li>
         {% endfor %}
-
 </ul>
-<h4>Files</h4>
+{%else%}
+<h6>(No folders here yet)</h6>
+{% endif %}
+
+<h4>Files(file-id)</h4>
 {% if files %}
 <ul>
     {%  for fold in files%}
-            <li><a href="{{ fold.media_file.url }}">{{ fold.name }}</a> </li>
+            <li><a href="{{ fold.media_file.url }}" >{{ fold.name }}({{fold.id}})</a> </li>
         {% endfor %}
 
 </ul>
 {% else %}
-<h4>hii</h4>
+<h6>(No files here yet!)</h6>
 {% endif %}
