--- a/webclient/templates/webclient/registration_form.html
+++ b/webclient/templates/webclient/registration_form.html
@@ -12,7 +12,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
     <a class="navbar-brand" href="#">SPC</a>
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+<!--     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'webclient:index' %}">
             Files  <span class="sr-only">(current)</span></a>
@@ -32,7 +32,7 @@
         <a class="nav-link" href="#">
             <span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp; Logout</a>
       </li>
-    </ul>
+    </ul> -->
 
   </div>
 </nav>
