--- a/webclient/templates/webclient/file_form.html
+++ b/webclient/templates/webclient/file_form.html
@@ -5,6 +5,32 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script type="text/javascript">
+var inactivityTime = function () {
+    var t;
+    window.onload = resetTimer;
+    // DOM Events
+    document.onmousemove = resetTimer;
+    document.onkeypress = resetTimer;
+
+    function logout() {
+      document.getElementById("logout").click();
+        alert("You are now logged out.")
+        //location.href = 'logout.php'
+    }
+
+    function resetTimer() {
+        clearTimeout(t);
+        t = setTimeout(logout, 900000)
+        // 1000 milisec = 1 sec
+    }
+};
+inactivityTime()
+
+// if (inactivityTime()>10000) {
+//    document.getElementById("logout").click();
+// }
+</script>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,7 +44,7 @@
             Files  <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Encryption-Decryption Schema</a>
+        <!-- <a class="nav-link" href="#">Encryption-Decryption Schema</a> -->
       </li>
         <form class="navbar-form navbar-right" role="search" method="get" action="#">
         <div class="form-group">
@@ -30,7 +56,7 @@
     </form>
         <li class="nav-item">
         <a class="nav-link" href="#">
-            <span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp; Logout</a>
+            <span class="glyphicon glyphicon-off" aria-hidden="true" id="logout"></span>&nbsp; Logout</a>
       </li>
     </ul>
 
