--- a/webclient/templates/webclient/detail.html
+++ b/webclient/templates/webclient/detail.html
@@ -49,10 +49,10 @@ inactivityTime()
             Root folder <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url  'webclient:folder_add' folder_id%}">Create Folder</a>
+        <a class="nav-link" href="{% url  'webclient:folder_add' folder_id%}">Add folder</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url  'webclient:file_add' folder_id%}">Add File</a>
+        <a class="nav-link" href="{% url  'webclient:file_add' folder_id%}">Add file</a>
       </li>
         <!-- <form class="navbar-form navbar-right" role="search" method="get" action="#">
         <div class="form-group">
