--- a/webclient/templates/webclient/detail.html
+++ b/webclient/templates/webclient/detail.html
@@ -31,11 +31,31 @@ var inactivityTime = function () {
     }
 };
 inactivityTime()
-
-// if (inactivityTime()>10000) {
-//    document.getElementById("logout").click();
-// }
 </script>
+
+<style>
+.tile { 
+  display: block;
+  position: relative;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  padding: 10px;
+  z-index: 1;
+}
+
+.tile1 {
+    text-align: center;
+    display: block;
+    position: relative;
+    background-color: #39ac39;
+    min-width: 160px;
+    padding: 10px;
+    z-index: 1;
+    color: #ffffff;
+}
+
+.tile:hover {background-color: #ddd;} 
+</style>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,45 +74,35 @@ inactivityTime()
       <li class="nav-item">
         <a class="nav-link" href="{% url  'webclient:file_add' folder_id%}">Add file</a>
       </li>
-        <!-- <form class="navbar-form navbar-right" role="search" method="get" action="#">
-        <div class="form-group">
-      <input class="form-control" type="text" name="q" value="">
-
-        </div>
-<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-
-    </form> -->
-        <li class="nav-item">
+      <li class="nav-item">
         <a class="nav-link" href="#">
             <span class="glyphicon glyphicon-off" aria-hidden="true" id="logout"></span>&nbsp; Logout</a>
-        <!-- <li class="nav-item">  <a class="nav-link" href="{% url  'webclient:file_add' folder_id%}">File Add</a></li>
-      </li> -->
+      </li>
     </ul>
 
   </div>
 </nav>
 
 
-<h3>Current working directory id-({{folder_id}})</h3>
-<h4>Folders(folder-id)</h4>
+<div class="tile1"><h3>Current working directory id-({{folder_id}})</h3></div>
+<div class="tile1"><h4>Folders(folder-id)</h4></div>
 {% if folders %}
 <ul>
     {%  for folde in folders%}
-            <li><a href="{% url 'webclient:detail' folde.id %}" >{{ folde.name }}({{folde.id}})</a> </li>
+            <li><div class="tile"><a href="{% url 'webclient:detail' folde.id %}" >{{ folde.name }}({{folde.id}})</a></div></li>
         {% endfor %}
 </ul>
 {%else%}
-<h6>(No folders here yet)</h6>
+<div class="tile"><h5>(No folders here yet)</h5></div>
 {% endif %}
-
-<h4>Files(file-id)</h4>
+<div class="tile1"><h4>Files(file-id)</h4></div>
 {% if files %}
 <ul>
     {%  for fold in files%}
-            <li><a href="{{ fold.media_file.url }}" >{{ fold.name }}({{fold.id}})</a> </li>
+        <li><div class="tile"><a href="{{ fold.media_file.url }}" >{{ fold.name }}({{fold.id}})</a></div></li>
         {% endfor %}
 
 </ul>
 {% else %}
-<h6>(No files here yet!)</h6>
+<div class="tile"><h5>(No files here yet!)</h5></div>
 {% endif %}
